--- a/css/styles.css
+++ b/css/styles.css
@@ -50,6 +50,9 @@ img
 .page-header
 {
   border-bottom: 1px solid #E7E9FC;  
+  box-shadow: 0 1px 6px 0 rgba(46, 47, 66, 0.08),
+0 1px 1px 0 rgba(46, 47, 66, 0.16),
+0 2px 1px 0 rgba(46, 47, 66, 0.08);
 }
 
 .header-container
@@ -112,8 +115,26 @@ img
     line-height: 1.5;
     letter-spacing: 0.02em;
     color: #2E2F42;
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+} 
+
+.nav-link.current
+{
+    position: relative;
 }
 
+.nav-link.current::after
+{
+    content: "";
+    position: absolute;
+    left: 0;
+    bottom: -1px;
+    width: 100%;
+    height: 4px;
+    border-radius: 2px;
+    background-color: #404BBF;
+}
+   
 .contacts {
     font-style: normal;
     margin-left: auto;
@@ -133,12 +154,14 @@ img
     line-height: 1.5;
     letter-spacing: 0.02em;
     color: #434455
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .nav-link:hover,
 .nav-link:focus,
 .contacts-link:hover,
-.contacts-link:focus
+.contacts-link:focus,
+.nav-link.current
 {
     color: #404BBF;
 }
@@ -152,7 +175,13 @@ img
 .introduction-banner
 {    
     padding: 188px 0;
-    background: #2E2F42;
+    margin: 0 auto;
+    max-width: 1440px;
+    background-color: #2E2F42;
+    background-image: linear-gradient(to bottom, rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)),url("../images/banner-hero.jpg");
+    background-repeat: no-repeat;
+    background-position: center center;
+    background-size: cover;
 }
 
 .introduction-banner-hero
@@ -183,7 +212,9 @@ img
     letter-spacing: 0.04em;
     color:#FFFFFF;
     background: #4D5AE5;
+    box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.15);
     cursor: pointer;
+    transition: background 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .introduction-banner button:hover
@@ -272,6 +303,9 @@ img
     width: calc((100% - 72px) / 4);
     background-color: #FFFFFF;
     border-radius: 0px 0px 4px 4px;
+    box-shadow: 0 2px 1px 0 rgba(46, 47, 66, 0.08),
+        0 1px 1px 0 rgba(46, 47, 66, 0.16),
+        0 1px 6px 0 rgba(46, 47, 66, 0.08);
 }
 
 .team-name
@@ -303,7 +337,36 @@ img
 .portfolio-item
 {
     width: calc((100% - 48px) / 3);
+    position: relative;
+    overflow: hidden;
+    transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
+
+.portfolio-item:hover
+{
+    box-shadow: 0 2px 1px 0 rgba(46, 47, 66, 0.08),
+        0 1px 1px 0 rgba(46, 47, 66, 0.16),
+        0 1px 6px 0 rgba(46, 47, 66, 0.08);
+}
+
+.overlay 
+{
+    padding: 8px;
+    background-color: #4D5AE5;
+    color: #F4F4FD;
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    transform: translateY(100%);
+    transition: transform 250ms ease-in-out; 
+}
+
+.portfolio-item:hover .overlay
+{
+        transform: translateY(0);
+    }
 
 .portfolio-app
 {
@@ -327,4 +390,5 @@ img
     background: #2E2F42;
     letter-spacing: 0.02em;
 }
+
 
