--- a/css/styles.css
+++ b/css/styles.css
@@ -153,9 +153,11 @@ img
     font-size: 16px;
     line-height: 1.5;
     letter-spacing: 0.02em;
-    color: #434455
+    color: #434455;
     transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
+
+
 
 .nav-link:hover,
 .nav-link:focus,
@@ -211,15 +213,15 @@ img
     line-height: 1.5;
     letter-spacing: 0.04em;
     color:#FFFFFF;
-    background: #4D5AE5;
+    background-color: #4D5AE5;
     box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.15);
     cursor: pointer;
-    transition: background 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .introduction-banner button:hover
 {
-    background: #404BBF;
+    background-color: #404BBF;
 }
 
 .introduction-banner button:focus 
@@ -264,6 +266,23 @@ img
     text-transform: capitalize;
     margin-bottom: 72px;
     color: #2E2F42
+}
+
+.strategy-box-icons
+{
+    display: flex;  
+    align-items: center;
+    justify-content: center;
+    height: 112px;
+    background-color: #F4F4FD;
+    border-radius: 4px;
+    border: 1px solid #8E8F99;
+    margin-bottom: 8px;
+}
+
+.strategy-icons
+{
+
 }
 
 .title
@@ -322,7 +341,45 @@ img
 .team-text
 {
     text-align: center;
+    margin-bottom: 8px;
 }
+
+.team-social-list
+{
+    display: flex;
+    justify-content: center;
+    gap: 24px;
+    }
+
+.team-social-item
+{
+    width: 40px; 
+    height: 40px;
+}
+
+.social-link
+{
+    width: 100%;
+    height: 100%;
+    background-color: #4D5AE5;
+    border-radius:50%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.team-social:hover,
+.team-social:focus
+{
+    background-color: #404BBF;
+}
+
+.social-icons
+{
+    fill: #F4F4FD;
+}
+
 
 /* portfolio*/
 
@@ -337,9 +394,7 @@ img
 .portfolio-item
 {
     width: calc((100% - 48px) / 3);
-    position: relative;
-    overflow: hidden;
-    transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    
 }
 
 .portfolio-item:hover
@@ -349,23 +404,32 @@ img
         0 1px 6px 0 rgba(46, 47, 66, 0.08);
 }
 
-.overlay 
+.portfolio-box
 {
-    padding: 8px;
-    background-color: #4D5AE5;
-    color: #F4F4FD;
+    position: relative;
+    overflow: hidden;
+    transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.text-overley
+{
     position: absolute;
     top: 0;
-    left: 0;
+    font-size: 16px;
+    line-height: 1.5;
+    letter-spacing: 0.02em;
+    color: #F4F4FD;
+    padding: 40px 32px;
+    background-color: #4D5AE5;
     width: 100%;
     height: 100%;
     transform: translateY(100%);
-    transition: transform 250ms ease-in-out; 
+    transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.portfolio-item:hover .overlay
+.portfolio-item:hover .text-overley
 {
-        transform: translateY(0);
+    transform: translateY(0%);
     }
 
 .portfolio-app
@@ -383,6 +447,17 @@ img
     background-color: #2E2F42;
 }
 
+.footer-box
+{
+    display: flex; 
+    align-items: baseline,
+}
+
+.slogan-box
+{
+    margin-right: 120px;
+}
+
 .footer-slogan 
 {
     max-width: 264px;
@@ -390,5 +465,34 @@ img
     background: #2E2F42;
     letter-spacing: 0.02em;
 }
+
+.footer-social-text
+{
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 1.5;
+    letter-spacing: 0.02em;
+    color: #FFFFFF;
+    margin-bottom: 16px;
+}
+
+.footer-social-list
+{
+    display: flex;
+    gap: 16px;
+}
+
+.footer-social-item
+{
+    width: 40px;
+    height: 40px;
+}
+
+.footer-social-link:hover,
+.footer-social-link:focus
+{
+    background-color: #31D0AA;
+}
+
 
 
