--- a/css/styles.css
+++ b/css/styles.css
@@ -369,7 +369,11 @@ img
     transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.team-social:hover,
+.team-social:hover
+{
+    background-color: #404BBF;   
+}
+
 .team-social:focus
 {
     background-color: #404BBF;
@@ -394,6 +398,7 @@ img
 .portfolio-item
 {
     width: calc((100% - 48px) / 3);
+    transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
     
 }
 
@@ -450,7 +455,7 @@ img
 .footer-box
 {
     display: flex; 
-    align-items: baseline,
+    align-items: baseline;
 }
 
 .slogan-box
@@ -488,7 +493,11 @@ img
     height: 40px;
 }
 
-.footer-social-link:hover,
+.footer-social-link:hover
+{
+        background-color: #31D0AA;
+}
+
 .footer-social-link:focus
 {
     background-color: #31D0AA;
