--- a/css/styles.css
+++ b/css/styles.css
@@ -364,14 +364,10 @@ img
     transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.team-social:hover
-{
-    background-color: #404BBF;   
-}
-
+.team-social:hover,
 .team-social:focus
 {
-    background-color: #404BBF;
+    background-color: #404BBF;   
 }
 
 .social-icons
@@ -488,15 +484,13 @@ img
     height: 40px;
 }
 
-.footer-social-link:hover
-{
-    background-color: #31D0AA;
-}
-
+.footer-social-link:hover,
 .footer-social-link:focus
 {
     background-color: #31D0AA;
 }
+
+
 
 
 
